--- a/app/assets/stylesheets/dashing_json.css.scss
+++ b/app/assets/stylesheets/dashing_json.css.scss
@@ -3,13 +3,13 @@ $dashing-json-string-color: #666;
 $dashing-json-number-color: #222;
 $dashing-json-boolean-color: #444;
 
-.parsed-json .key,
-.parsed-json .null,
-.parsed-json .string,
-.parsed-json .boolean,
-.parsed-json .number { display: inline; }
+.dashing-json .key,
+.dashing-json .null,
+.dashing-json .string,
+.dashing-json .boolean,
+.dashing-json .number { display: inline; }
 
-.parsed-json .key     { color: $dashing-json-key-color; font-weight: bold; }
-.parsed-json .string  { color: $dashing-json-string-color; }
-.parsed-json .number  { color: $dashing-json-number-color; }
-.parsed-json .boolean { color: $dashing-json-boolean-color; }
+.dashing-json .key     { color: $dashing-json-key-color; font-weight: bold; }
+.dashing-json .string  { color: $dashing-json-string-color; }
+.dashing-json .number  { color: $dashing-json-number-color; }
+.dashing-json .boolean { color: $dashing-json-boolean-color; }
